deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: projeto
  name: projeto-deployment
  namespace: projeto-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      name: projeto
  template:
    metadata:
      labels:
        name: projeto
    spec:
      containers:
      - name: gpdemo-app
        image: docker.io/%%dockerUser%%/gp_projeto:%%imageTag%%
        ports: 
          - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: docker-registry
