deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: projeto-service
  namespace: projeto-dev
spec:
  type: NodePort
  selector:
    name: projeto
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
